--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,9 @@
 <p>app-component!</p>
-<app-home></app-home>
+
+<nav>
+    <ul>
+        <li><a routerLink="/about" routerLinkActive="active">About</a></li>
+        <li><a routerLink="/home" routerLinkActive="active">Home</a></li>
+    </ul>
+</nav>
+<router-outlet></router-outlet>
