--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,15 @@
-<p>about works!</p>
+<p appHighlight style="width: 200px;">about works!</p>
+<p [appHighlight]="'red'" style="width: 200px;">about works!</p>
+<p [appHighlight]="myColor" style="width: 200px;">about works!</p>
+<ul [ngSwitch]="loginName">
+    <li *ngSwitchCase="'user'">
+        <p>User is logged in..</p>
+    </li>
+    <li *ngSwitchCase="'admin'">
+        <p>Admin is logged in..</p>
+        <app-home></app-home>
+    </li>
+    <li *ngSwitchDefault>
+        <p>Please log in to system.</p>
+    </li>
+</ul>
