--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div>
     <h3>Angular Cascading Combobox</h3>
 
-    <p>Tỉnh/Thành phố:</p>
+    <span>Tỉnh/Thành phố: </span>
     <select name="" id="city" (change)="changeCity($event)">
         <option *ngFor="let data of vietnam" value="{{ data.city }}">
             {{ data.city }}
@@ -13,7 +13,7 @@
 </div>
 
 <ng-template #hasDistrict>
-    <p>Quận/Huyện:</p>
+    <span>Quận/Huyện: </span>
     <select name="" id="district">
         <option *ngFor="let district of districts">
             {{ district }}
