--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,6 +1,4 @@
-<p appHighlight style="width: 200px;">about works!</p>
-<p [appHighlight]="'red'" style="width: 200px;">about works!</p>
-<p [appHighlight]="myColor" style="width: 200px;">about works!</p>
+<p appHighlight>about works!</p>
 <ul [ngSwitch]="loginName">
     <li *ngSwitchCase="'user'">
         <p>User is logged in..</p>
@@ -13,3 +11,7 @@
         <p>Please log in to system.</p>
     </li>
 </ul>
+
+<span>Counter = {{ counter }}</span>
+<br>
+<span>Counter Square = {{ counterSquare }}</span>
