--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,8 @@
     <ul>
         <li><a routerLink="/about" routerLinkActive="active">About</a></li>
         <li><a routerLink="/home" routerLinkActive="active">Home</a></li>
+        <li><a routerLink="/template-driven-form" routerLinkActive="active">Template Driven Form</a></li>
+        <li><a routerLink="/reactive-form" routerLinkActive="active">Reactive Form</a></li>
     </ul>
 </nav>
 <router-outlet></router-outlet>
