--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,7 @@
         <li><a routerLink="/home" routerLinkActive="active">Home</a></li>
         <li><a routerLink="/template-driven-form" routerLinkActive="active">Template Driven Form</a></li>
         <li><a routerLink="/reactive-form" routerLinkActive="active">Reactive Form</a></li>
+        <li><a routerLink="/get-data" routerLinkActive="active">Get Data</a></li>
     </ul>
 </nav>
 <router-outlet></router-outlet>
