Learn http-post

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
         <li><a routerLink="/template-driven-form" routerLinkActive="active">Template Driven Form</a></li>
         <li><a routerLink="/reactive-form" routerLinkActive="active">Reactive Form</a></li>
         <li><a routerLink="/get-data" routerLinkActive="active">Get Data</a></li>
+        <li><a routerLink="/post-data" routerLinkActive="active">Post Data</a></li>
     </ul>
 </nav>
 <router-outlet></router-outlet>
