Learned http-post

--- a/src/app/get-data/get-data.component.html
+++ b/src/app/get-data/get-data.component.html
@@ -1,5 +1,5 @@
 <p>get-data works!</p>
-<table>
+<!-- <table>
     <thead>
         <tr>
             <th>ID</th>
@@ -9,9 +9,9 @@
         </tr>
     </thead>
     <tbody>
-        <ng-container *ngFor="let user of ">
+        <ng-container *ngFor="let user of users">
             <tr>
-                <td></td>
+                <td>{{ user }}</td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -19,4 +19,4 @@
         </ng-container>
         
     </tbody>
-</table>
+</table> -->
