--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,8 @@
         <li><a routerLink="/reactive-form" routerLinkActive="active">Reactive Form</a></li>
         <li><a routerLink="/get-data" routerLinkActive="active">Get Data</a></li>
         <li><a routerLink="/post-data" routerLinkActive="active">Post Data</a></li>
+        <li><a routerLink="/delete-data" routerLinkActive="active">Delete Data</a></li>
+        
     </ul>
 </nav>
 <router-outlet></router-outlet>
