--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,2 @@
-<p>app-component!</p>
-
-<nav>
-    <ul>
-        <li><a routerLink="/about" routerLinkActive="active">About</a></li>
-        <li><a routerLink="/home" routerLinkActive="active">Home</a></li>
-        <li><a routerLink="/template-driven-form" routerLinkActive="active">Template Driven Form</a></li>
-        <li><a routerLink="/reactive-form" routerLinkActive="active">Reactive Form</a></li>
-        <li><a routerLink="/get-data" routerLinkActive="active">Get Data</a></li>
-        <li><a routerLink="/post-data" routerLinkActive="active">Post Data</a></li>
-        <li><a routerLink="/delete-data" routerLinkActive="active">Delete Data</a></li>
-        
-    </ul>
-</nav>
+<app-parent></app-parent>
 <router-outlet></router-outlet>
